--- a/masterclass/geometry2d/004 Describing rotation in 2D.ipynb
+++ b/masterclass/geometry2d/004 Describing rotation in 2D.ipynb
@@ -5,19 +5,19 @@
    "metadata": {},
    "source": [
     "<h3>Math For Rotation Matrix</h3>\n",
-    "<img src=\"screenshots/rotation001.png\">\n",
+    "<img src=\"screenshots/rotation001.png\" height=300 width=500>\n",
     "<h6>Since the origin is the same for A<sub>p</sub> and B<sub>p</sub>, their components are the same.</h6>\n",
-    "<img src=\"screenshots/rotation002.png\">\n",
+    "<img src=\"screenshots/rotation002.png\" height=300 width=500>\n",
     "<h6>Matrix Form</h6>\n",
-    "<img src=\"screenshots/rotation003.png\">\n",
-    "<img src=\"screenshots/rotation004.png\">\n",
-    "<img src=\"screenshots/rotation005.png\">\n",
-    "<img src=\"screenshots/rotation006.png\">"
+    "<img src=\"screenshots/rotation003.png\" height=300 width=500>\n",
+    "<img src=\"screenshots/rotation004.png\" height=300 width=500>\n",
+    "<img src=\"screenshots/rotation005.png\" height=300 width=500>\n",
+    "<img src=\"screenshots/rotation006.png\" height=300 width=500>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "[  0,   0, 1]])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,17 +54,17 @@
     "# Create the World Coordinate Frame.  Origin is (0,0) and the orientation is 0.\n",
     "\n",
     "# Initialize variables\n",
-    "origin_x = 0\n",
-    "origin_y = 0\n",
-    "world_frame_rotation = 0\n",
+    "origin_x = 0      # x position of World Coordinate Frame\n",
+    "origin_y = 0      # y position of World Coordinate Frame\n",
+    "w_orientation = 0 # World Coordinate Frame Orientation\n",
     "\n",
     "# Create a World Coordinate Frame W\n",
     "W = CoordSys3D(name='W')\n",
     "\n",
     "# Rotation Matrix\n",
     "world_coordinate_frame = sp.Matrix([\n",
-    "    [round(np.cos(np.deg2rad(world_frame_rotation)), 3), round(-np.sin(np.deg2rad(world_frame_rotation)), 3), origin_x],\n",
-    "    [round(np.sin(np.deg2rad(world_frame_rotation)), 3), round(np.cos(np.deg2rad(world_frame_rotation)), 3), origin_y],\n",
+    "    [round(np.cos(np.deg2rad(w_orientation)), 3), round(-np.sin(np.deg2rad(w_orientation)), 3), origin_x],\n",
+    "    [round(np.sin(np.deg2rad(w_orientation)), 3), round(np.cos(np.deg2rad(w_orientation)), 3), origin_y],\n",
     "    [0, 0, 1]\n",
     "])\n",
     "\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "[    0,     0, 1]])"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,26 +151,28 @@
     "# Create a reference coordinate frame with respect to the world coordinate frame.\n",
     "# Enter the orientation of reference frame with respect to the world coordinate frame in degrees.\n",
     "\n",
-    "reference_orientation = 30\n",
+    "r_orientation = 30 # Reference Frame Orientation\n",
     "\n",
     "# Vector v1 with respect to the world coordinate frame.\n",
     "v1 = 0 * W.i + 0 * W.j + 0 * W.k\n",
     "\n",
     "# Rotation Matrix\n",
     "reference_coordinate_frame = sp.Matrix([\n",
-    "    [round(np.cos(np.deg2rad(reference_orientation)), 3), round(-np.sin(np.deg2rad(reference_orientation)), 3), 0],\n",
-    "    [round(np.sin(np.deg2rad(reference_orientation)), 3), round(np.cos(np.deg2rad(reference_orientation)), 3), 0],\n",
+    "    [round(np.cos(np.deg2rad(r_orientation)), 3), round(-np.sin(np.deg2rad(r_orientation)), 3), 0],\n",
+    "    [round(np.sin(np.deg2rad(r_orientation)), 3), round(np.cos(np.deg2rad(r_orientation)), 3), 0],\n",
     "    [0, 0, 1]\n",
     "])\n",
     "\n",
-    "pose_r_with_respect_to_w = CoordSys3D(name='R', parent=W, location=v1, rotation_matrix=reference_coordinate_frame)\n",
+    "pose_r_with_respect_to_w = CoordSys3D(\n",
+    "    name='R', parent=W, location=v1, rotation_matrix=reference_coordinate_frame\n",
+    ")\n",
     "\n",
-    "reference_coordinate_frame"
+    "r_frame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +259,7 @@
        "0"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +285,7 @@
        "1.0"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +313,7 @@
        "[ 0.0,  0.0, 1.0]])"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +345,7 @@
        "[ 0.0,  0.0, 1.0]])"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +371,7 @@
        "True"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +398,7 @@
        "[0]])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +489,7 @@
        "[   0]])"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
